# kiwi-store

./: .gitignore  Cargo.toml  Key-Value Store .Net Api.postman_collection.json  README.md  docker-compose.yml
KiwiStore/: IKiwiStoreClient.cs  KiwiStore.csproj  KiwiStore.sln  KiwiStoreClient.cs  KiwiStoreEndpoint.cs  KiwiStoreSection.cs  Readme.md  ServiceExtensions.cs
KiwiStore.Test.Api/: KiwiStore.Test.Api.sln
KiwiStore.Test.Api/KiwiStore.Test.Api/: KiwiStore.Test.Api.csproj  Program.cs  appsettings.json
KiwiStore.Test.Api/KiwiStore.Test.Api/Properties/: launchSettings.json
dashboard/: index.html
kiwi-store-client/: Cargo.toml
kiwi-store-client/src/: cli.rs  command.rs  handler.rs  main.rs
kiwi-store-loadtest/: .env  Cargo.toml  metrics.json
kiwi-store-loadtest/src/: cli.rs  data.rs  main.rs  measurement.rs
kiwi-store-loadtest/src/runner/: fuzz.rs  load.rs  mod.rs
kiwi-store-metric-api/: .env  Cargo.toml
kiwi-store-metric-api/src/: data.rs  main.rs
kiwi-store-server/: .env  Cargo.toml  Dockerfile  Readme.md
kiwi-store-server/src/: command.rs  config.rs  handler.rs  main.rs  server.rs  tests.rs
kiwi-store-server/src/store/: data.rs  mod.rs
