[package]
name = "kiwi-store-loadtest"
description = "Load testing tool for the Kiwi Store API"
license = "MIT"
repository = "https://github.com/buraksenyurt/kiwi-store"
authors = ["Burak Selim Şenyurt"]
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
