[package]
name = "kiwi-store-loadtest"
description = "Load testing tool for the Kiwi Store API"
license = "MIT"
repository = "https://github.com/buraksenyurt/kiwi-store"
authors = ["Burak Selim Şenyurt"]
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
rand = { version = "0.9.1", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
