[package]
name = "kiwi-store-server"
description = "A lightweight In-Memory Key-Value Store Server for Learning Purposes"
license = "MIT"
repository = "https://github.com/buraksenyurt/kiwi-store"
authors = ["Burak Selim Şenyurt"]
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.27"
tokio = { version = "1.45.1", features = ["full"] }